project('database', 'cpp')

sources = [
    'BTree.cpp',
    'BTreePage.cpp',
    'Index.cpp',
    'Main.cpp',
    'Page.cpp',
    'PageSet.cpp',
    'Record.cpp',
    'RowIterators/ProjectIterator.cpp',
    'RowIterators/SelectIterator.cpp',
    'RowIterators/TableIterator.cpp',
    'RowPredicates/ComparePredicate.cpp',
    'RowPredicates/LogicalPredicate.cpp',
    'Table.cpp',
    'Value.cpp'
]

executable('database', sources, cpp_args: ['/std:c++17'])