project('database', 'cpp')

sources = [
    'BTree.cpp',
    'BTreePage.cpp',
    'Expression.cpp',
    'Index.cpp',
    'Main.cpp',
    'Page.cpp',
    'PageSet.cpp',
    'Record.cpp',
    'RowIterators/ForeignKeyJoinIterator.cpp',
    'RowIterators/IndexIterator.cpp',
    'RowIterators/ProjectIterator.cpp',
    'RowIterators/SelectIterator.cpp',
    'RowIterators/TableIterator.cpp',
    'Table.cpp',
    'Value.cpp'
]

executable('database', sources, cpp_args: ['/std:c++17'])